frontend/test/should_pass/iterated_003.grg
test nested
{
	iterated {
		x:Node;
		optional {
		}
	}
}