frontend/test/should_fail/iterated_006.grg
test t
{
	x:Node;
	iterated
	{
		iterated {
			.;
		}
	}
}